--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ atom_feed:
   path: ~
 author: 
   avatar: ~
-  bio: "배워가는 학생<br>21.03.29~22.09.28 in 군대"
+  bio: "배워가는 학생<br>21.03.29~22.09.28 군대"
   email: okht13@gmail.com
   links: 
     - "label:\"GitHub\" icon:\"fab fa-fw fa-github\" url:\"https://github.com/simple4logic"
@@ -53,7 +53,7 @@ defaults:
       author_profile: true
       comments: ~
       layout: single
-      read_time: true
+      read_time: false
       related: true
       share: true
 description: "A Place for Memory."
