--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Stellarium"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Hyuntae H"
-description              : "배워가는 학생<br>21.03.29~22.09.28 군대"
+description              : "배워가는 학생<br>~22.09.28 군대"
 url                      : "https://simple4logic.github.io"
 baseurl                  : # 서브 경로가 있는 경우 기재
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
