--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,8 @@
 main:
   - title: "Posts"
     url: /_posts/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
+  - title: "Categories"
+    url: /categories/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
