--- a/_config.yml
+++ b/_config.yml
@@ -247,6 +247,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: false
+      show_date: true
       comments: true
       share: false
       related: true
