--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,3 +21,7 @@ doc:
         url : /categories/#broad-knowledge
       - title : Plan
         url : /categories/#plan
+      - title : Diary
+        url : /categories/#Daily_Record
+      - title : Book Review
+        url : /categories/#book_review
