--- a/_config.yml
+++ b/_config.yml
@@ -260,8 +260,9 @@ defaults:
       comments: true
       share: false
       related: true
-      toc_ads: true
-      toc_sticky: true
+      toc : true #origianlly X
+      toc_ads: false #true
+      toc_sticky: false #true
       sidebar:
         nav: doc
 
