--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,6 +24,6 @@ doc:
       - title : Plan
         url : /categories/#plan
       - title : Diary
-        url : /categories/Daily_Record/#blog_developing_diary
+        url : /categories/#daily_record
       - title : Book Review
         url : /categories/#book_review
